tests/snapshots/view_snapshots__bug_thinking_blocks_not_wrapped.snap
---
source: tests/view_snapshots.rs
expression: output
---
Model: Unknown | Main Agent
┌Main Agent (1 entries)────────────────────────────────────┐
│This is a short line.                                     │
│                                                          │
│This is a very long line that should definitely wrap when │
│displayed in a narrow terminal window because it exceeds t│
│he typical width of most terminal displays.               │
│                                                          │
│Another short line.                                       │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search
