tests/snapshots/view_snapshots__message_collapsed_multiline.snap
---
source: tests/view_snapshots.rs
expression: output
---
┌Main Agent (1 entries)────────────────────────────────────┐
││     1 Line 1                                            │
││       Line 2                                            │
││       Line 3                                            │
││       Line 4                                            │
││       Line 5                                            │
││       Line 6                                            │
││       Line 7                                            │
││       Line 8                                            │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
