tests/snapshots/view_snapshots__message_with_code_block.snap
---
source: tests/view_snapshots.rs
expression: output
---
┌Main Agent (1 entries)──────────────────────────────────────────────┐
│Here's some code:                                                   │
│                                                                    │
│```rust                                                             │
│fn main() {                                                         │
│    println!("Hello, world!");                                      │
│}                                                                   │
│```                                                                 │
│                                                                    │
│That's the code.                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘
