tests/snapshots/view_snapshots__message_with_search_highlighting.snap
---
source: tests/view_snapshots.rs
expression: output
---
┌Conversation (1 entries)──────────────────────────────────────────────────────┐
│This is a test message with some searchable content.                          │
│Another line with test keyword.                                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
